Fix perspective on Safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,7 +39,6 @@ body {
   height: 100vh;
 }
 main {
-  position: relative;
   height: 100vh;
   max-height: 100vh;
   width: 100vw;
@@ -48,6 +47,11 @@ main {
   perspective: 2px;
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .content-section {
